--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.5",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
   },
