--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cn": "^0.1.1",
+    "firebase": "^12.5.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
